Allen/k8slearn/istio/labs/05-canary/canary-v2.yaml
# Canary v2 版本（金丝雀）
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: canary
        version: v2
    spec:
      containers:
      - name: canary
        imagePullPolicy: Always
        image: cncamp/httpserver:v2.0-metrics
        ports:
        - containerPort: 80
