Allen/k8slearn/istio/labs/05-canary/toolbox.yaml
# 测试工具容器
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toolbox
  template:
    metadata:
      labels:
        app: toolbox
        access: "true"
    spec:
      containers:
      - name: toolbox
        image: centos
        command:
        - tail
        - -f
        - /dev/null
